--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 	<link rel="stylesheet" type="text/css" href="./css/base.css">
     <!-- 首页样式 -->
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
-    
+    <!-- 字体图标 -->
+	<link rel="stylesheet" type="text/css" href="./font/icomoon/style.css">
 </head>
 <body>
     <!-- 头部导航条 -->
     <div class="nav">
         <div class="nav-center">
             头部导航条
+            <span class="icon-location2"></span>
         </div>
     </div>
 
