--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" type="text/css" href="./css/com_header.css">
     <!-- 首页样式 -->
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <!-- 尾部样式 -->
+    <link rel="stylesheet" type="text/css" href="./css/com_footer.css">
     <!-- 字体图标 -->
     <link rel="stylesheet" type="text/css" href="./font/icomoon/style.css">
 </head>
@@ -39,7 +41,17 @@
 
             <!-- 导航条右侧 我的美团 手机APP 商家中心 美团规则 网站导航 -->
             <div class="nav-center-right">
-                <a href="#">我的美团</a>
+                <!-- 下拉菜单 -->
+                <div class="dropdown">
+                    <a href="#">我的美团</a>
+                    <ul>
+                        <li>我的订单</li>
+                        <li>我的收藏</li>
+                        <li>抵用券</li>
+                        <li>账户设置</li>
+                    </ul>
+                </div>
+
                 <a href="#">手机APP</a>
                 <a href="#">商家中心</a>
                 <a href="#">美团规则</a>
